<resources>
    <string name="app_name">Capstone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_request_id">Request ID:</string>
    <string name="label_date_requested">Date Requested:</string>
    <string name="label_status">Status:</string>
    <string name="more">More</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="request_id_format">Request ID: %1$d</string>
    <string name="date_requested_format">Date Requested: %1$s</string>
    <string name="sack_qty_format">Sack Quantity: %1$d</string>
    <string name="service_format">Service: %1$s</string>
    <string name="pickup_location_format">Pickup Location: %1$s</string>
    <string name="delivery_location_format">Delivery Location: %1$s</string>
    <string name="status_format">Status: %1$s</string>
    <string name="request_details_title">Request Details</string>
    <string name="label_customer">Customer:</string>
    <string name="label_sacks">Sacks:</string>
    <string name="label_services">Services:</string>
    <string name="label_schedule">Pickup Schedule:</string>
    <string name="label_pickup_location">Pickup Location:</string>
    <string name="label_delivery_location">Delivery Location:</string>
    <string name="label_comment">Comment:</string>
    <string name="label_submitted_at">Submitted At:</string>
    <string name="label_progress">Progress:</string>
    <string name="customer_format">Customer: %1$s</string>
    <string name="sacks_format">Sacks: %1$d</string>
    <string name="services_format">Services: %1$s</string>
    <string name="schedule_format">Pickup Schedule: %1$s</string>
    <string name="label_schedule_owner">Schedule:</string>
    <string name="schedule_format_owner">Schedule: %1$s</string>
    <string name="comment_format">Comment: %1$s</string>
    <string name="submitted_at_format">Submitted At: %1$s</string>
    <string name="close">Close</string>
    <string name="progress_format">Progress: %1$d%%</string>
    <string name="nav_home">Home</string>
    <string name="nav_request">Request</string>
    <string name="nav_track">Track</string>
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_messages">Messages</string>
    <string name="profile_title">Profile</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email address</string>
    <string name="hint_contact">Contact number</string>
    <string name="hint_address">Home address</string>
    <string name="action_save">Save</string>
    <string name="change_password_title">Change password</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="action_change_password">Change password</string>
    <string name="label_first_name">First name:</string>
    <string name="label_last_name">Last name:</string>
    <string name="label_email">Email:</string>
    <string name="label_contact">Contact number:</string>
    <string name="label_address">Home address:</string>
    <string name="label_contact_number">Contact Number:</string>
    <string name="error_first_name_required">Please enter your first name</string>
    <string name="error_last_name_required">Please enter your last name</string>
    <string name="error_contact_required">Please enter your 11-digit contact number</string>
    <string name="error_contact_invalid">Contact must be 11 digits</string>
    <string name="error_address_required">Please enter your home address</string>
    <string name="error_new_password_short">New password must be at least 8 characters</string>
    <string name="saving_profile">Saving…</string>
    <string name="saving_password">Updating password…</string>
    <string name="hint_new_password_confirm">Confirm new password</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_old_password_required">Please enter your current password</string>
    <string name="not_set">Not set</string>
    <string name="not_available">Not available</string>
    <string name="server_returned_raw">Server returned raw: %1$s</string>
    <string name="rb_delivery_boy_pickup">Rider going for Pickup</string>
    <string name="rb_waiting_customer_dropoff">Waiting for Customer to drop the Palay</string>
    <string name="rb_pending">Pending</string>
    <string name="rb_processing">Processing</string>
    <string name="rb_out_for_delivery">Out for Delivery</string>
    <string name="rb_milling_done">Milling Done</string>
    <string name="rb_delivered">Delivered</string>
    <string name="rb_waiting_customer_pickup">Waiting for Customer to claim</string>
    <string name="submit">Submit</string>
    <string name="title_track">Update Status</string>
    <string name="partner_name">Partner Name</string>
    <string name="copy_debug">Copy</string>
    <string name="hint_type_message">Type a message…</string>
    <string name="send">Send</string>
    <string name="waiting_debug">Waiting for debug output…</string>
    <string name="messages_label">Messages:\n</string>
    <string name="show_debug">Show debug</string>
    <string name="hide_debug">Hide debug</string>
    <string name="requesting_conversation_id">Requesting conversationID=%1$s for user=%2$d</string>
    <string name="requesting_conversation_other">Requesting conversation with otherUserID=%1$d for user=%2$d</string>
    <string name="use_signup_address">Use my signup address</string>
    <string name="label_pickup_date">Pickup Date</string>
    <string name="hint_pickup_date">Select pickup date</string>
    <string name="next">Next</string>
    <string name="bg_rice_field">Rice field background</string>
    <string name="step_title">Step 1 of 4:</string>
    <string name="details_title">Details of Rice Milling</string>
    <string name="step_progress_text">1/4</string>
    <string name="select_milling_service">Select the type of rice milling service:</string>
    <string name="currency_dollar">$</string>
    <string name="milling_for_fee">Milling for a fee</string>
    <string name="label_number_of_sacks">Number of sacks:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sack_default_count">1</string>
    <string name="service_rates">Service rates</string>
    <string name="rate_per_sack_label">Rate per sack:</string>
    <string name="rate_per_sack_value">₱20.00</string>
    <string name="sr_pabayo">Pabayo</string>
    <string name="sr_pabayo_rate">2.50 / kilo</string>
    <string name="sr_pickup">Pick up</string>
    <string name="sr_pickup_rate">10.00</string>
    <string name="sr_delivery">Delivery</string>
    <string name="sr_delivery_rate">10.00</string>
    <string name="sr_feeds_conversion">Feeds Conversion</string>
    <string name="sr_feeds_rate1">220.00 / 1 kilo</string>
    <string name="sr_feeds_rate2">110.00 / ½ kilo</string>
    <string name="step1_title">Step 1 of 4:</string>
    <string name="step2_title">Step 2 of 4:</string>
    <string name="step3_title">Step 3 of 4:</string>
    <string name="step4_title">Step 4 of 4:</string>
    <string name="delivery_service_title">Delivery Service</string>
    <string name="pickup_service_title">Pick up Service</string>
    <string name="step2_progress">2/4</string>
    <string name="select_completed">Select completed</string>
    <string name="pickup_from_my_location">Pick up the palay from my location</string>
    <string name="dropoff_at_facility">I will drop off the palay at your facility</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="contact_number_loading">Loading…</string>
    <string name="contact_number_format">Contact number: %1$s</string>
    <string name="action_call">Call</string>
    <string name="action_message">Message</string>
    <string name="action_view_profile">View profile</string>
    <string name="action_edit">Edit</string>
    <string name="step3_progress">3/4</string>
    <string name="step4_progress">4/4</string>
    <string name="delivery_question">How would you like to receive your milled rice?</string>
    <string name="rb_deliver_to_location">Deliver the milled rice to my location</string>
    <string name="rb_pickup_from_facility">I will pick up the milled rice from your facility</string>
    <string name="label_delivery_address">Enter your delivery address</string>
    <string name="hint_delivery_address">Enter your delivery address</string>
    <string name="contact_details_title">Contact Details</string>
    <string name="contact_information">Contact Information</string>
    <string name="label_name">Name</string>
    <string name="hint_enter_name">Enter your name</string>
    <string name="hint_enter_contact_number">Enter your contact number</string>
    <string name="additional_comments_optional">Additional Comments (Optional)</string>
    <string name="hint_message_for_owner">Message for the owner</string>
    <string name="queue_status">Queue Status</string>
    <string name="processing_label">Processing</string>
    <string name="pending_label">Pending</string>
    <string name="request_title">Request</string>
    <string name="home_title">Homepage</string>
    <string name="btn_view_requests">View Requests</string>
    <string name="btn_view_history">View Transaction History</string>
    <string name="btn_view_messages">View Messages</string>
    <string name="messages_badge_zero">0</string>
    <string name="start_date_hint">Start date</string>
    <string name="end_date_hint">End date</string>
    <string name="action_filter">Filter</string>
    <string name="action_clear">Clear</string>
    <string name="no_completed_requests">No completed requests found</string>
    <string name="feeds_conversion_question">Would you like to convert your milling by-products (rice hulls, bran) into animal feeds?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="feeds_conversion_explanation">Converting by-products can provide a sustainable stream. We process the hulls and bran into nutrient-rich feed pellets, ready for sale or your own use.</string>
    <string name="create_account">Create Account</string>
    <string name="identification">Identification</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="choose_photo">Choose photo</string>
    <string name="sign_in">Sign in</string>
    <string name="content_desc_id_photo">Identification photo</string>
    <string name="content_desc_back_button">Back</string>
    <string name="api_base_url">http://192.168.1.15:8000/</string>
    <string name="service_label">Service:</string>
    <string name="payment_amount_not_set">Payment amount: Not set</string>
    <string name="view_details">View Details</string>
</resources>