<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/request"
        android:title="@string/nav_request"
        android:icon="@drawable/ic_request"/>

    <item
        android:id="@+id/track"
        android:title="@string/nav_track"
        android:icon="@drawable/ic_track"/>

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />

    <!-- Messages menu item -->
    <item
        android:id="@+id/messages"
        android:icon="@drawable/ic_notification"
        android:title="@string/nav_messages" />

    <!-- Profile menu item -->
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

    <!-- Logout menu item -->
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout" />

</menu>
