<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/serviceratebackground">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/service_rates"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPabayoLabel"
        android:text="@string/sr_pabayo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvPabayoRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sr_pabayo_rate"
        app:layout_constraintBaseline_toBaselineOf="@id/tvPabayoLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPickupLabel"
        android:text="@string/sr_pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPabayoLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvPickupRate"
        android:text="@string/sr_pickup_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tvPickupLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDeliveryLabel"
        android:text="@string/sr_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPickupLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvDeliveryRate"
        android:text="@string/sr_delivery_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tvDeliveryLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvFeedsConversionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sr_feeds_conversion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeliveryLabel" />

    <TextView
        android:id="@+id/tvFeedsRate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sr_feeds_rate1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvFeedsConversionLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvDeliveryRate" />

    <TextView
        android:id="@+id/tvFeedsRate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sr_feeds_rate2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFeedsRate1" />

</androidx.constraintlayout.widget.ConstraintLayout>